--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,10 +1,214 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,500&display=swap');
+
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
 }
 
 a {
     text-decoration: none;
+}
+
+/* sửa header */
+
+#web {
+    width: 100%;
+    height: 100vh;
+
+}
+
+header .top-header {
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+    background: #0D0D0D no-repeat;
+    align-items: center;
+    padding: 0px 20px;
+}
+
+
+header .top-header .logo ion-icon {
+    width: 50px;
+    height: 50px;
+    color: #fff;
+    transition: 0.5s all;
+}
+
+header .top-header .logo ion-icon:hover {
+    transform: rotate(39deg);
+}
+
+header .top-header #menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+header .top-header #menu .item {
+    margin: 0px 30px;
+    color: #fff;
+    transition: color 0.4s;
+}
+
+header .top-header #menu .item:hover {
+    color: rgb(0, 183, 255);
+}
+
+/*banner*/
+header .banner {
+
+    background-image: url('https://cdn.shopify.com/s/files/1/0577/9675/5633/files/leo_mtdanstore-slide-h1-1.png?v=1643293978');
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+
+header .banner .intro {
+    width: 50%;
+    height: 100%;
+    text-align: center;
+
+}
+
+header .banner .intro {
+    padding: 15% 10%;
+}
+
+header .banner .intro h1 {
+    text-transform: uppercase;
+    color: #fff;
+    padding-top: 30px;
+    text-align: center;
+}
+
+header .banner .intro h1 {
+    margin-bottom: 10px;
+}
+
+header .banner .intro p {
+    color: #fff;
+}
+
+header .banner .actions {
+    margin: 0px auto;
+}
+
+header .banner .actions .item {
+    width: 170px;
+    height: 40px;
+    margin: 0px 10px;
+    margin-top: 20px;
+    background: transparent;
+    border: 2px solid #fff;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+}
+
+header .banner .actions .item:before {
+    position: absolute;
+    content: "";
+    width: 150px;
+    height: 20px;
+    background: #fff;
+    transform: rotate(30deg);
+    left: -140px;
+    transition: all 1s;
+}
+
+header .banner .actions .item:hover:before {
+    left: 140px;
+}
+
+
+/* icon */
+.actions {
+    display: flex;
+    width: 300px;
+    color: #fff;
+}
+
+.actions div {
+    margin: 0px 20px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: 2px solid #fff;
+}
+
+.actions div ion-icon {
+    font-size: 20px;
+}
+
+.actions .cart {
+    position: relative;
+}
+
+.actions .cart small {
+    position: absolute;
+    top: -12px;
+    right: -5px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* icon */
+.topnav .search-container {
+    float: right;
+}
+
+.topnav input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+}
+
+.topnav .search-container button {
+    float: right;
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+    background: #ccc;
+}
+
+
+
+#search_box #search_text {
+    border: none;
+    outline: none;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    transition: all 0.25s ease-in-out;
+}
+
+#search_btn {
+    border: none;
+    background-color: #fff;
+
+}
+
+.menu_bar #search_btn {
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
 }
 
 .list_of_products {
@@ -16,11 +220,12 @@ a {
 }
 
 .menu_bar {
-    padding: 28px 60px 16px;
+    padding: 10px 65px 20px;
     margin: 0;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    display: flex;
+    justify-content: space-between;
     background: #0D0D0D no-repeat;
 }
 
@@ -50,7 +255,7 @@ a {
 .trending_products {
     width: 1410px;
     max-width: 100%;
-    padding-top: 140px;
+    padding-top: 40px;
     padding-bottom: 140px;
     margin: 0 auto;
 }
@@ -158,8 +363,8 @@ a {
 .image_product,
 .additional_information {
     width: 1410px;
-    padding-top: 125px !important;
-    padding-bottom: 125px !important;
+    padding-top: 125px;
+    padding-bottom: 125px;
 
 }
 
@@ -226,6 +431,25 @@ a {
     padding-right: 90px;
 }
 
+@media screen and (max-width: 600px) {
+    .topnav .search-container {
+        float: none;
+    }
+
+    .topnav a, .topnav input[type=text], .topnav .search-container button {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+
+    .topnav input[type=text] {
+        border: 1px solid #ccc;
+    }
+}
+
 @media (max-width: 1200px) {
 
     .list_of_products {
@@ -233,3 +457,75 @@ a {
         width: 66.66667%;
     }
 }
+
+@media (max-width: 768px) {
+    .trending_products .promotional_products {
+        display: flex;
+        margin: 0 auto;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .promotional_products .chill_content {
+        width: 33%;
+    }
+}
+
+@media (max-width: 425px) {
+    .promotional_products .chill_content {
+        width: 320px;
+    }
+
+    .information_products {
+        flex-direction: column;
+    }
+
+    .image_product, .additional_information {
+        width: 425px;
+        padding: 0;
+    }
+
+    .additional_information .title_block, .additional_information .sub-title-widgetr {
+        text-align: center;
+    }
+
+    .additional_information .block .text-param {
+        text-align: center;
+        padding: 0;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .additional_information .block {
+        text-align: center;
+    }
+}
+
+.topnav .icon {
+    display: none;
+    color: #fff;
+  }
+@media screen and (max-width: 600px) {
+    .topnav li:not(:first-child) {display: none;}
+    .topnav li.icon {
+      float: right;
+      display: block;
+    }
+    .top-header .actions{
+        display: none;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive li {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
