--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -13,8 +13,9 @@ body {
     height: 100%;
     width: 100%;
     place-items: center;
-    background-color: hsl(18, 99%, 54%);
-    background-image: linear-gradient(62deg, hsl(18, 99%, 54%) 0%, hsl(240, 5%, 10%));
+    background-image: url(http://wallup.net/wp-content/uploads/2016/03/01/302824-nature-bicycle.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 ::selection {
@@ -25,7 +26,7 @@ body {
 .container {
     overflow: hidden;
     max-width: 390px;
-    background: #fff;
+    background: rgb(255, 255, 255, 0.5);
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
