--- a/assets/css/Detail.css
+++ b/assets/css/Detail.css
@@ -29,6 +29,7 @@ header .top-header #menu .item {
     margin: 0px 30px;
     color: #fff;
     transition: color 0.4s;
+    cursor: pointer;
 }
 
 header .top-header #menu .item:hover {
